--- a/src/app/layout/test/test.component.html
+++ b/src/app/layout/test/test.component.html
@@ -6,7 +6,7 @@
         <div class="dash-widget">
           <span class="dash-widget-bg1"><i class="fa fa-stethoscope" aria-hidden="true"></i></span>
           <div class="dash-widget-info text-right">
-            <h3>98</h3>
+            <h3>{{tests.length}}</h3>
             <span class="widget-title1">Tests <i class="fa fa-check" aria-hidden="true"></i></span>
           </div>
         </div>
@@ -49,25 +49,57 @@
               <form action="#" >
                 <div class="form-group row">
                   <div class="col-md-11">
-                    <input type="text" class="form-control rounded" placeholder="identifiant du patient">
+                    <input type="text" class="form-control rounded" placeholder="Matricule">
                   </div>
                 </div>
                 <div class="form-group row">
-                  <div class="col-md-5">
-                    <input type="text" class="form-control rounded" placeholder="numéro du tube">
+                  <label for="nom" class="col-md-2 col-form-label">Nom complet</label>
+                  <div class="col-md-9">
+                    <input type="text" id="nom" class="form-control rounded">
                   </div>
-                  <div class="col-md-6 rounded">
-                    <select class="select rounded">
-                      <option>type de test</option>
-                      <option value="1">California</option>
-                      <option value="2">Texas</option>
-                      <option value="3">Florida</option>
+                </div>
+                <div class="form-group row">
+                  <label for="email" class="col-md-2 col-form-label">Email</label>
+                  <div class="col-md-9">
+                    <input type="email" id="email" class="form-control rounded">
+                  </div>
+                </div>
+                <div class="form-group row">
+                  <label for="telephone1" class="col-md-2 col-form-label">Telephone1</label>
+                  <div class="col-md-9">
+                    <input type="text" id="telephone1" class="form-control rounded">
+                  </div>
+                </div>
+                <div class="form-group row">
+                  <label for="telephone2" class="col-md-2 col-form-label">Telephone2</label>
+                  <div class="col-md-9">
+                    <input type="text" id="telephone2" class="form-control rounded">
+                  </div>
+                </div>
+                <div class="form-group row">
+                  <label for="Adresse" class="col-md-2 col-form-label">Adresse</label>
+                  <div class="col-md-9">
+                    <input type="text" id="Adresse" class="form-control rounded">
+                  </div>
+                </div>
+                <div class="form-group row">
+                  <label class="col-md-2 col-form-label">IGM</label>
+                  <div class="col-md-9">
+                    <select class="select">
+                      <option>Select</option>
+                      <option value="1">A+</option>
+                      <option value="2">O+</option>
                     </select>
                   </div>
                 </div>
                 <div class="form-group row">
-                  <div class="col-lg-11">
-                    <textarea rows="5" cols="5" class="form-control rounded" placeholder="Observations"></textarea>
+                  <label class="col-md-2 col-form-label">IGC</label>
+                  <div class="col-md-9">
+                    <select class="select">
+                      <option>Select</option>
+                      <option value="1">A+</option>
+                      <option value="2">O+</option>
+                    </select>
                   </div>
                 </div>
               </form>
