changement de couleur

--- a/src/app/layout/resultat-test/resultat-test.component.html
+++ b/src/app/layout/resultat-test/resultat-test.component.html
@@ -103,7 +103,7 @@
               </div>
             </div>
             <div class="text-right">
-              <button type="submit" class="btn btn-primary">Submit</button>
+              <button type="submit" class="btn btn-primary-one">Envoyer</button>
             </div>
           </form>
         </div>
