box pour rendez vous

--- a/src/app/layout/appointments/appointments.component.html
+++ b/src/app/layout/appointments/appointments.component.html
@@ -9,7 +9,7 @@
       </div>-->
     </div>
     <div class="row doctor-grid">
-      <div class="col-md-4 col-sm-4  col-lg-3">
+      <div class="col-md-4 col-sm-4  col-lg-3" *ngFor="let appointment of appointments">
         <div class="profile-widget">
           <div class="doctor-img">
             <a class="avatar" href="profile.html"><img alt="" src="assets/img/doctor-thumb-03.jpg"></a>
@@ -28,7 +28,7 @@
           </div>
         </div>
       </div>
-      <div class="col-md-4 col-sm-4  col-lg-3">
+      <!--<div class="col-md-4 col-sm-4  col-lg-3">
         <div class="profile-widget">
           <div class="doctor-img">
             <a class="avatar" href="profile.html"><img alt="" src="assets/img/doctor-thumb-07.jpg"></a>
@@ -236,7 +236,7 @@
             <i class="fa fa-map-marker"></i> United States, San Francisco
           </div>
         </div>
-      </div>
+      </div>-->
     </div>
     <!--<div class="row">
       <div class="col-sm-12">
