--- a/src/app/layout/appointments/appointments.component.html
+++ b/src/app/layout/appointments/appointments.component.html
@@ -4,27 +4,42 @@
       <div class="col-sm-4 col-3">
         <h4 class="page-title">Rendez Vous</h4>
       </div>
-      <!--<div class="col-sm-8 col-9 text-right m-b-20">
-        <a href="add-doctor.html" class="btn btn-primary btn-rounded float-right"><i class="fa fa-plus"></i> Ajouter un rendez vous</a>
-      </div>-->
-    </div>
+      <div class="col-sm-8 col-9 text-right m-b-20">
+        <!--<a href="add-doctor.html" class="btn btn-primary btn-rounded float-right"><i class="fa fa-plus"></i> Ajouter un rendez vous</a>-->
+        <div class="search-box float-right">
+          <div class="input-group input-group-md" style="margin-left: 15px; background-color: #fafafa;">
+            <input type="text" class="form-control" placeholder="Rechercher" name="search">
+            <span class="input-group-append">
+            <button class="btn" type="button"><i class="fa fa-search"></i></button>
+          </span>
+          </div>
+        </div>
+      </div>
+    </div><br/>
     <div class="row doctor-grid">
       <div class="col-md-4 col-sm-4  col-lg-3" *ngFor="let appointment of appointments">
-        <div class="profile-widget">
+        <div class="profile-widget activeAppointment">
           <div class="doctor-img">
-            <a class="avatar" href="profile.html"><img alt="" src="assets/img/doctor-thumb-03.jpg"></a>
+            <a class="avatar" href="#" *ngIf="image == null"><img alt="" src="assets/img/user.jpg"></a>
+            <a class="avatar" href="#" *ngIf="image != null"><img alt="" [src]="patientImage(appointment.patient.imageId)"></a>
           </div>
-          <div class="dropdown profile-action">
+         <!-- <div class="dropdown profile-action">
             <a href="#" class="action-icon dropdown-toggle" data-toggle="dropdown" aria-expanded="false"><i class="fa fa-ellipsis-v"></i></a>
             <div class="dropdown-menu dropdown-menu-right">
               <a class="dropdown-item" href="edit-doctor.html"><i class="fa fa-pencil m-r-5"></i> Edit</a>
               <a class="dropdown-item" href="#" data-toggle="modal" data-target="#delete_doctor"><i class="fa fa-trash-o m-r-5"></i> Delete</a>
             </div>
+          </div>-->
+          <h4 class="doctor-name text-ellipsis"><a href="#">{{appointment.patient.name}}</a></h4>
+          <!--<div class="doc-prof">Gynecologist</div>-->
+          <div class="user-country" style="margin-top: 7px;">
+            <i class="fa fa-map-marker" ></i> {{appointment.paysDepart}}
           </div>
-          <h4 class="doctor-name text-ellipsis"><a href="profile.html">Cristina Groves</a></h4>
-          <div class="doc-prof">Gynecologist</div>
-          <div class="user-country">
-            <i class="fa fa-map-marker"></i> United States, San Francisco
+          <div class="user-country" style="margin-top: 7px;">
+            <i class="fa fa-calendar" ></i> {{millisToDate(appointment.jour)}}
+          </div>
+          <div class="user-country" style="margin-top: 7px;">
+            <i class="fa fa-clock-o" ></i> {{appointment.plageHoraire}}
           </div>
         </div>
       </div>
@@ -194,44 +209,6 @@
           </div>
           <h4 class="doctor-name text-ellipsis"><a href="profile.html">Shirley Willis</a></h4>
           <div class="doc-prof">Radiologist</div>
-          <div class="user-country">
-            <i class="fa fa-map-marker"></i> United States, San Francisco
-          </div>
-        </div>
-      </div>
-      <div class="col-md-4 col-sm-4  col-lg-3">
-        <div class="profile-widget">
-          <div class="doctor-img">
-            <a class="avatar" href="profile.html"><img alt="" src="assets/img/doctor-thumb-08.jpg"></a>
-          </div>
-          <div class="dropdown profile-action">
-            <a href="#" class="action-icon dropdown-toggle" data-toggle="dropdown" aria-expanded="false"><i class="fa fa-ellipsis-v"></i></a>
-            <div class="dropdown-menu dropdown-menu-right">
-              <a class="dropdown-item" href="edit-doctor.html"><i class="fa fa-pencil m-r-5"></i> Edit</a>
-              <a class="dropdown-item" href="#" data-toggle="modal" data-target="#delete_doctor"><i class="fa fa-trash-o m-r-5"></i> Delete</a>
-            </div>
-          </div>
-          <h4 class="doctor-name text-ellipsis"><a href="profile.html">Pamela Curtis</a></h4>
-          <div class="doc-prof">Pediatrics</div>
-          <div class="user-country">
-            <i class="fa fa-map-marker"></i> United States, San Francisco
-          </div>
-        </div>
-      </div>
-      <div class="col-md-4 col-sm-4  col-lg-3">
-        <div class="profile-widget">
-          <div class="doctor-img">
-            <a class="avatar" href="profile.html"><img alt="" src="assets/img/doctor-thumb-06.jpg"></a>
-          </div>
-          <div class="dropdown profile-action">
-            <a href="#" class="action-icon dropdown-toggle" data-toggle="dropdown" aria-expanded="false"><i class="fa fa-ellipsis-v"></i></a>
-            <div class="dropdown-menu dropdown-menu-right">
-              <a class="dropdown-item" href="edit-doctor.html"><i class="fa fa-pencil m-r-5"></i> Edit</a>
-              <a class="dropdown-item" href="#" data-toggle="modal" data-target="#delete_doctor"><i class="fa fa-trash-o m-r-5"></i> Delete</a>
-            </div>
-          </div>
-          <h4 class="doctor-name text-ellipsis"><a href="profile.html">Justin Parker</a></h4>
-          <div class="doc-prof">Physical Therapist</div>
           <div class="user-country">
             <i class="fa fa-map-marker"></i> United States, San Francisco
           </div>
