--- a/src/app/layout/test/test.component.html
+++ b/src/app/layout/test/test.component.html
@@ -33,9 +33,9 @@
     <div class="row">
       <div class="search-box">
         <div class="input-group input-group-md" style="margin-left: 15px; background-color: #fafafa;">
-          <input type="text" class="form-control" placeholder="identifiant du patient" name="search" [(ngModel)]="search">
+          <input type="text" class="form-control" placeholder="identifiant du patient" name="search">
           <span class="input-group-append">
-            <button class="btn" type="button" (click)="searchPatient()" [disabled]="search == ''"><i class="fa fa-search"></i></button>
+            <button class="btn" type="button"><i class="fa fa-search"></i></button>
           </span>
         </div>
       </div>
