--- a/src/styles.css
+++ b/src/styles.css
@@ -32,7 +32,7 @@ ul.breadcrumb li a:hover {
 }
 
 .bg-thead{
-   background-color: #007bff;
+   background-color: #96ab5c;
  }
 
 .table-hover > thead{
