--- a/src/app/layout/laboratoire/laboratoire.component.html
+++ b/src/app/layout/laboratoire/laboratoire.component.html
@@ -1,39 +1,156 @@
 <div class="page-wrapper">
   <div class="content">
     <div class="row">
-      <div class="col-lg-8 offset-lg-2">
-       <!-- <h4 class="page-title">Laboratoire</h4>-->
-        <ul class="breadcrumb">
+      <div class="col-sm-4 col-3">
+        <h4 class="page-title">Laboratoires</h4>
+        <!--<ul class="breadcrumb">
           <li><a routerLink="/dashboard">Tableau de bord</a></li>
           <li>Laboratoire</li>
-        </ul>
+        </ul>-->
       </div>
-
+      <!--<div class="col-sm-8 col-9 text-right m-b-20">
+        <a href="add-patient.html" class="btn btn btn-primary btn-rounded float-right"><i class="fa fa-plus"></i> Add Patient</a>
+      </div>-->
     </div>
+
     <div class="row">
       <div class="col-md-12">
         <div class="card-box">
-          <h4 class="card-title" style="margin-left:25%;margin-right: 25%;">Ajouter un Laboratoire</h4><br>
+          <h4 class="card-title" style="margin-left:25%;margin-right: 25%;">Enregistrer un Laboratoire</h4><br>
           <form [formGroup]="form" (ngSubmit)="saveLabo()">
-            <div class="row">
-              <div class="col-md-12">
-                <div class="form-group row">
-                  <label class="col-md-3 col-form-label">Nom du laboratoire</label>
-                  <div class="col-md-9">
-                    <input type="text" class="form-control" formControlName="nom">
+            <div>
+              <div class="row">
+                <div class="col-md-12">
+                  <div class="profile-img-wrap">
+                    <img class="inline-block" src="assets/img/user.jpg" alt="logo laboratoire" *ngIf="urlFile == null">
+                    <img class="inline-block" src={{urlFile}} alt="logo laboratoire" *ngIf="urlFile != null">
+                    <div class="fileupload btn">
+                      <span class="btn-text" *ngIf="urlFile == null">logo</span>
+                      <input class="upload inline-block" type="file" (change)="onFileChanged($event)">
+                    </div>
                   </div>
-                </div>
-                <div class="form-group row">
-                  <label class="col-md-3 col-form-label">Ville</label>
-                  <div class="col-md-9">
-                    <input type="text" class="form-control" formControlName="ville">
+                  <div class="profile-basic">
+                    <div class="row">
+                      <div class="col-md-12">
+                        <div class="form-group form-focus">
+                          <label class="focus-label">Nom Laboratoire</label>
+                          <input type="text" class="form-control floating" value="">
+                        </div>
+                      </div>
+                    </div>
+                    <div class="row">
+                      <div class="col-md-6">
+                        <div class="form-group form-focus select-focus">
+                          <label class="focus-label">Pays</label>
+                          <select class="select form-control floating">
+                            <option value="male selected">Male</option>
+                            <option value="female">Female</option>
+                          </select>
+                        </div>
+                      </div>
+                      <div class="col-md-6">
+                        <div class="form-group form-focus select-focus">
+                          <label class="focus-label">Ville</label>
+                          <select class="select form-control floating">
+                            <option value="male selected">Male</option>
+                            <option value="female">Female</option>
+                          </select>
+                        </div>
+                      </div>
+                      <div class="col-md-6">
+                        <div class="form-group form-focus">
+                          <label class="focus-label">Longitude</label>
+                          <input class="form-control floating" type="text" value="">
+                        </div>
+                      </div>
+                      <div class="col-md-6">
+                        <div class="form-group form-focus select-focus">
+                          <label class="focus-label">Latitude</label>
+                          <input type="text" class="form-control floating" value="">
+                        </div>
+                      </div>
+                    </div>
+                    <br/><h5 style="color: grey; margin-left: 250px;margin-right: 250px;">Services</h5>
+                    <div class="row">
+                      <div class="col-md-4">
+                        <div class="checkbox">
+                          <label>
+                            <input type="checkbox" value="test" name="test" class="rounded" style="width: 15px;height: 15px;margin-top: 10px;">
+                            Test covid19
+                          </label>
+                        </div>
+                      </div>
+                      <div class="col-md-4">
+                        <div class="checkbox">
+                          <label>
+                            <input type="checkbox" value="vaccin" name="vaccin" class="rounded" [(ngModel)]="vaccinChecked" formControlName="service" style="width: 15px;height: 15px;margin-top: 10px;">
+                            Vaccins
+                          </label>
+                        </div>
+                      </div>
+                      <div class="col-md-4">
+                        <div class="checkbox">
+                          <label>
+                            <input type="checkbox" value="autre" name="autre" class="rounded" style="width: 15px;height: 15px;margin-top: 10px;">
+                            Autres
+                          </label>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="row" *ngIf="vaccinChecked">
+                      <div class="col-md-10" style="margin-top: 15px;">
+                        <div class="form-group form-focus select-focus">
+                          <label class="focus-label">vaccin</label>
+                          <select class="select form-control floating">
+                            <option value="male selected">BCG</option>
+                            <option value="female">Female</option>
+                          </select>
+                        </div>
+                      </div>
+                      <div class="col-ld-2" style="margin-top: 15px;">
+                        <button type="submit" class="btn btn-primary-one">Ajouter</button>
+                      </div>
+                    </div>
+                    <br/><h5 style="color: grey; margin-left: 250px;margin-right: 250px;">Administrateur du compte</h5>
+                    <div class="row" >
+                      <div class="col-md-6">
+                        <div class="form-group form-focus">
+                          <label class="focus-label">Nom d'utilisateur</label>
+                          <input type="text" class="form-control floating" value="" style="margin-top: 10px;">
+                        </div>
+                      </div>
+                      <div class="col-md-6">
+                        <div class="form-group form-focus">
+                          <label class="focus-label">Mot de passe</label>
+                          <input type="text" class="form-control floating" value="" style="margin-top: 10px;">
+                        </div>
+                      </div>
+                    </div>
                   </div>
                 </div>
               </div>
             </div>
-            <div class="text-right">
-              <button type="submit" class="btn btn-secondary" (click)="resetForm()">Annuler</button>&nbsp;&nbsp;
-              <button type="submit" class="btn btn-primary">Enregistrer</button>
+            <!--<div class="row">
+              <div class="col-md-12">
+                <div class="form-group row">
+                  <div class="col-md-6 row">
+                    <label class="col-md-4 col-form-label">Nom du laboratoire</label>
+                    <div class="col-md-8">
+                      <input type="text" class="form-control rounded" formControlName="nom">
+                    </div>
+                  </div>
+                  <div class="col-md-6 row">
+                    <label class="col-md-4 col-form-label">Ville</label>
+                    <div class="col-md-8">
+                      <input type="text" class="form-control rounded" formControlName="ville">
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>-->
+            <div class="text-right" style="margin-top: 25px;">
+              <button type="submit" class="btn btn-secondary-one" (click)="resetForm()">Annuler</button>&nbsp;&nbsp;
+              <button type="submit" class="btn btn-primary-one">Enregistrer</button>
             </div>
           </form>
         </div>
