--- a/src/app/layout/resultat-test/resultat-test.component.html
+++ b/src/app/layout/resultat-test/resultat-test.component.html
@@ -44,7 +44,7 @@
       <div class="col-md-6">
         <div class="card-box shadow-sm p-3 mb-5 bg-white rounded">
           <h4 class="card-title">Informations du test</h4>
-          <form action="#">
+          <form [formGroup]="form" (ngSubmit)="saveTest()">
             <div class="form-group row">
               <div class="col-md-11">
                 <input type="text" class="form-control rounded" value="{{patient.identifiant}}" placeholder="identifiant du patient" readonly>
@@ -56,14 +56,14 @@
                 <div class="col-md-4">
                   <div class="radio">
                     <label>
-                      <input type="radio" name="radio"> Positif
+                      <input type="radio" formControlName="igg" value="true"> Positif
                     </label>
                   </div>
                 </div>
                 <div class="col-md-4">
                   <div class="radio">
                     <label>
-                      <input type="radio" name="radio"> Négatif
+                      <input type="radio" formControlName="igg" value="false"> Négatif
                     </label>
                   </div>
                 </div>
@@ -75,14 +75,14 @@
                 <div class="col-md-4">
                   <div class="radio">
                     <label>
-                      <input type="radio" name="radio"> Positif
+                      <input type="radio" formControlName="igm" value="true"> Positif
                     </label>
                   </div>
                 </div>
                 <div class="col-md-4">
                   <div class="radio">
                     <label>
-                      <input type="radio" name="radio"> Négatif
+                      <input type="radio" formControlName="igm" value="false"> Négatif
                     </label>
                   </div>
                 </div>
@@ -90,7 +90,7 @@
             </div>
             <div class="form-group row">
               <div class="col-lg-11">
-                <textarea rows="3" cols="5" class="form-control rounded" placeholder="Observations"></textarea>
+                <textarea rows="3" cols="5" class="form-control rounded" placeholder="Observations" formControlName="testCommentaire" value="true"></textarea>
               </div>
             </div>
             <div class="text-left">
@@ -103,7 +103,7 @@
               </div>
             </div>
             <div class="text-right">
-              <button type="submit" class="btn btn-primary-one">Envoyer</button>
+              <button type="submit" class="btn btn-primary-one" (click)="saveTest()">Envoyer</button>
             </div>
           </form>
         </div>
@@ -121,7 +121,7 @@
                 </a>
               </div>-->
               <div class="account-logo">
-                <a href="index-2.html">
+                <a href="#">
                   <img alt="Cristina Groves" src="assets/img/user.jpg" class="img-fluid rounded-circle" *ngIf="imagePath == null">
                   <img alt="Cristina Groves" [src]="imagePath" class="img-fluid rounded-circle" *ngIf="imagePath != null">
                 </a>
