--- a/src/app/layout/util-component/sidebar/sidebar.component.html
+++ b/src/app/layout/util-component/sidebar/sidebar.component.html
@@ -16,29 +16,14 @@
           <a routerLink="/appointments"><i class="fa fa-calendar"></i> <span>Rendez-vous</span></a>
         </li>
         <li>
-          <a routerLink="/tests"><i class="fa fa-calendar"></i> <span>Tests</span></a>
+          <a routerLink="/tests"><i class="fa fa-calendar"></i> <span>Prendre un RDV</span></a>
         </li>
         <li>
           <a routerLink="/resultat"><i class="fa fa-calendar"></i> <span>Resultat de test</span></a>
         </li>
-        <!--<li>
-          <a routerLink="#"><i class="fa fa-calendar"></i> <span>Enregistrer un test</span></a>
-        </li>
         <li>
-          <a routerLink="#"><i class="fa fa-calendar"></i> <span>Enregistrer un résultat</span></a>
+          <a routerLink="/resultat-vaccin"><i class="fa fa-calendar"></i> <span>Resultat de vaccin</span></a>
         </li>
-        <li>
-          <a routerLink="#"><i class="fa fa-calendar"></i> <span>Afficher les RDV</span></a>
-        </li>
-        <li>
-          <a routerLink="#"><i class="fa fa-calendar"></i> <span>Envoyer les résultats</span></a>
-        </li>
-        <li>
-          <a routerLink="#"><i class="fa fa-calendar"></i> <span>Faire un test</span></a>
-        </li>
-        <li>
-          <a routerLink="#"><i class="fa fa-calendar"></i> <span>Liste de visites</span></a>
-        </li>-->
         <li>
           <a routerLink="/laboratoires"><i class="fa fa-calendar"></i> <span>Enregistrer un laboratoire</span></a>
         </li>
