--- a/src/app/layout/laboratoire/laboratoire.component.html
+++ b/src/app/layout/laboratoire/laboratoire.component.html
@@ -17,7 +17,7 @@
       <div class="col-md-12">
         <div class="card-box">
           <h4 class="card-title" style="margin-left:25%;margin-right: 25%;">Enregistrer un Laboratoire</h4><br>
-          <form [formGroup]="form" (ngSubmit)="saveLabo()">
+          <div class="form">
             <div>
               <div class="row">
                 <div class="col-md-12">
@@ -53,7 +53,7 @@
                           <label class="focus-label">Ville</label>
                           <select class="select form-control floating">
                             <option value="male selected">Male</option>
-                            <option value="female">Female</option>
+                            <option value="female1">Female</option>
                           </select>
                         </div>
                       </div>
@@ -83,7 +83,7 @@
                       <div class="col-md-4">
                         <div class="checkbox">
                           <label>
-                            <input type="checkbox" value="vaccin" name="vaccin" class="rounded" [(ngModel)]="vaccinChecked" formControlName="service" style="width: 15px;height: 15px;margin-top: 10px;">
+                            <input type="checkbox" value="vaccin" name="vaccin" class="rounded" [(ngModel)]="vaccinChecked" style="width: 15px;height: 15px;margin-top: 10px;">
                             Vaccins
                           </label>
                         </div>
@@ -99,16 +99,13 @@
                     </div>
                     <div class="row" *ngIf="vaccinChecked">
                       <div class="col-md-10" style="margin-top: 15px;">
-                        <div class="form-group form-focus select-focus">
-                          <label class="focus-label">vaccin</label>
-                          <select class="select form-control floating">
-                            <option value="male selected">BCG</option>
-                            <option value="female">Female</option>
-                          </select>
-                        </div>
-                      </div>
-                      <div class="col-ld-2" style="margin-top: 15px;">
-                        <button type="submit" class="btn btn-primary-one">Ajouter</button>
+                        <ng-multiselect-dropdown
+                          [placeholder]="'selectionner les vaccins effectués'"
+                          [data]="vaccins"
+                          [(ngModel)]="vaccinEffectuer"
+                          [settings]="dropdownSettings"
+                        >
+                        </ng-multiselect-dropdown>
                       </div>
                     </div>
                     <br/><h5 style="color: grey; margin-left: 250px;margin-right: 250px;">Administrateur du compte</h5>
@@ -130,29 +127,11 @@
                 </div>
               </div>
             </div>
-            <!--<div class="row">
-              <div class="col-md-12">
-                <div class="form-group row">
-                  <div class="col-md-6 row">
-                    <label class="col-md-4 col-form-label">Nom du laboratoire</label>
-                    <div class="col-md-8">
-                      <input type="text" class="form-control rounded" formControlName="nom">
-                    </div>
-                  </div>
-                  <div class="col-md-6 row">
-                    <label class="col-md-4 col-form-label">Ville</label>
-                    <div class="col-md-8">
-                      <input type="text" class="form-control rounded" formControlName="ville">
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>-->
             <div class="text-right" style="margin-top: 25px;">
               <button type="submit" class="btn btn-secondary-one" (click)="resetForm()">Annuler</button>&nbsp;&nbsp;
-              <button type="submit" class="btn btn-primary-one">Enregistrer</button>
+              <button type="submit" class="btn btn-primary-one" (click)="saveLabo()">Enregistrer</button>
             </div>
-          </form>
+          </div>
         </div>
       </div>
     </div>
