--- a/src/app/layout/resultat-vaccin/resultat-vaccin.component.html
+++ b/src/app/layout/resultat-vaccin/resultat-vaccin.component.html
@@ -43,54 +43,33 @@
     <div class="row">
       <div class="col-md-6">
         <div class="card-box shadow-sm p-3 mb-5 bg-white rounded">
-          <h4 class="card-title">Informations du test</h4>
-          <form [formGroup]="form" (ngSubmit)="saveTest()">
+          <h4 class="card-title">Informations du vaccin</h4>
+          <div class="form">
             <div class="form-group row">
-              <div class="col-md-11">
+              <div class="col-md-12">
                 <input type="text" class="form-control rounded" value="{{patient.identifiant}}" placeholder="identifiant du patient" readonly>
               </div>
             </div>
-            <div class="form-group row">
-              <label class="col-form-label col-md-2">IgG :</label>
-              <div class="col-md-10 row" style="margin-top: 6px;">
-                <div class="col-md-4">
-                  <div class="radio">
-                    <label>
-                      <input type="radio" formControlName="igg" value="true"> Positif
-                    </label>
-                  </div>
-                </div>
-                <div class="col-md-4">
-                  <div class="radio">
-                    <label>
-                      <input type="radio" formControlName="igg" value="false"> Négatif
-                    </label>
-                  </div>
-                </div>
+            <div class="row">
+              <div class="col-md-12" style="margin-top: 15px;">
+                <ng-multiselect-dropdown
+                  [placeholder]="'selectionner les vaccins effectués'"
+                  [data]="vaccins"
+                  [(ngModel)]="vaccinEffectuer"
+                  [settings]="dropdownSettings"
+                >
+                </ng-multiselect-dropdown>
               </div>
-            </div>
-            <div class="form-group row">
-              <label class="col-form-label col-md-2">IgM :</label>
-              <div class="col-md-10 row" style="margin-top: 6px;">
-                <div class="col-md-4">
-                  <div class="radio">
-                    <label>
-                      <input type="radio" formControlName="igm" value="true"> Positif
-                    </label>
-                  </div>
-                </div>
-                <div class="col-md-4">
-                  <div class="radio">
-                    <label>
-                      <input type="radio" formControlName="igm" value="false"> Négatif
-                    </label>
-                  </div>
-                </div>
+            </div><br/>
+            <h5 style="margin-bottom: 15px; margin-right: 10px;margin-left: 20px;" *ngIf="vaccinEffectuer.length > 0">Vaccins effecués sur le patient</h5>
+            <div class="row" *ngIf="vaccinEffectuer.length > 0">
+              <div class="col-md-4" *ngFor="let obj of vaccinEffectuer">
+                <input type="text" class="form-control rounded" value="{{obj.label}}"/>
               </div>
-            </div>
+            </div><br *ngIf="vaccinEffectuer.length > 0"/>
             <div class="form-group row">
-              <div class="col-lg-11">
-                <textarea rows="3" cols="5" class="form-control rounded" placeholder="Observations" formControlName="testCommentaire" value="true"></textarea>
+              <div class="col-md-12">
+                <textarea rows="3" cols="5" class="form-control rounded" placeholder="Observations" value="true"></textarea>
               </div>
             </div>
             <div class="text-left">
@@ -103,9 +82,9 @@
               </div>
             </div>
             <div class="text-right">
-              <button type="submit" class="btn btn-primary-one">Envoyer</button>
+              <button type="submit" class="btn btn-primary-one" (click)="saveVaccin()">Envoyer</button>
             </div>
-          </form>
+          </div>
         </div>
       </div>
       <div class="col-md-6">
