--- a/src/app/layout/test/test.component.html
+++ b/src/app/layout/test/test.component.html
@@ -1,7 +1,7 @@
 
 <div class="page-wrapper">
   <div class="content">
-    <div class="row">
+    <!--<div class="row">
       <div class="col-md-6 col-sm-6 col-lg-6 col-xl-4">
         <div class="dash-widget">
           <span class="dash-widget-bg1"><i class="fa fa-stethoscope" aria-hidden="true"></i></span>
@@ -29,8 +29,8 @@
           </div>
         </div>
       </div>
-    </div>
-    <div class="row">
+    </div>-->
+    <!--<div class="row">
       <div class="search-box">
         <div class="input-group input-group-md" style="margin-left: 15px; background-color: #fafafa;">
           <input type="text" class="form-control" placeholder="identifiant du patient" name="search">
@@ -39,88 +39,142 @@
           </span>
         </div>
       </div>
-    </div><br>
+    </div><br>-->
     <div class="row">
       <div class="col-md-12">
-        <div class="card-box shadow-sm p-3 mb-5 bg-white rounded">
-          <h4 class="card-title">Informations du test</h4>
-          <div class="row">
-            <div class="col-md-9">
-              <form action="#" >
+        <div class="card-box">
+         <!-- <h4 class="card-title">Two Column Horizontal Form</h4>
+          <h4 class="card-title">Personal Information</h4>-->
+          <form action="#">
+            <div class="row">
+              <div class="col-md-12">
                 <div class="form-group row">
-                  <div class="col-md-11">
-                    <input type="text" class="form-control rounded" placeholder="Matricule">
-                  </div>
-                </div>
-                <div class="form-group row">
-                  <label for="nom" class="col-md-2 col-form-label">Nom complet</label>
-                  <div class="col-md-9">
-                    <input type="text" id="nom" class="form-control rounded">
-                  </div>
-                </div>
-                <div class="form-group row">
-                  <label for="email" class="col-md-2 col-form-label">Email</label>
-                  <div class="col-md-9">
-                    <input type="email" id="email" class="form-control rounded">
-                  </div>
-                </div>
-                <div class="form-group row">
-                  <label for="telephone1" class="col-md-2 col-form-label">Telephone1</label>
-                  <div class="col-md-9">
-                    <input type="text" id="telephone1" class="form-control rounded">
-                  </div>
-                </div>
-                <div class="form-group row">
-                  <label for="telephone2" class="col-md-2 col-form-label">Telephone2</label>
-                  <div class="col-md-9">
-                    <input type="text" id="telephone2" class="form-control rounded">
-                  </div>
-                </div>
-                <div class="form-group row">
-                  <label for="Adresse" class="col-md-2 col-form-label">Adresse</label>
-                  <div class="col-md-9">
-                    <input type="text" id="Adresse" class="form-control rounded">
-                  </div>
-                </div>
-                <div class="form-group row">
-                  <label class="col-md-2 col-form-label">IGM</label>
-                  <div class="col-md-9">
-                    <select class="select">
-                      <option>Select</option>
-                      <option value="1">A+</option>
-                      <option value="2">O+</option>
+                  <label class="col-md-2 col-form-label">Motif du RDV</label>
+                  <div class="col-md-10">
+                    <select class="select form-control">
+                      <option value="test">Test</option>
+                      <option value="vaccin">Vaccin</option>
                     </select>
                   </div>
-                </div>
-                <div class="form-group row">
-                  <label class="col-md-2 col-form-label">IGC</label>
-                  <div class="col-md-9">
-                    <select class="select">
-                      <option>Select</option>
-                      <option value="1">A+</option>
-                      <option value="2">O+</option>
-                    </select>
-                  </div>
-                </div>
-              </form>
-            </div>
-            <div class="col-md-3" style="margin-top: 350px;">
-              <div class="text-right">
-                <div class="checkbox" style="margin-right: 110px;">
-                  <label>
-                    <input type="checkbox" name="checkbox" class="rounded"> Check me out
-                  </label>
-                </div>
-              </div><br/>
-              <div class="text-right col-md-12 row">
-                <div class="col-md-5">
-                  <button type="submit" class="btn btn-secondary-one" (click)="resetForm()">Annuler</button>
-                </div>
-                <div class="col-md-1"></div>
-                <div class="col-md-5">
-                  <button type="submit" class="btn btn-primary-one">Enregistrer</button>
                 </div>
               </div>
+              <div class="col-md-6">
+                <div class="form-group row">
+                  <label class="col-md-3 col-form-label">Pays</label>
+                  <div class="col-md-9">
+                    <select class="select form-control">
+                      <option value="male selected">Male</option>
+                      <option value="female">Female</option>
+                    </select>
+                  </div>
+                </div>
+                <div class="form-group row">
+                  <label class="col-md-3 col-form-label">Laboratoire</label>
+                  <div class="col-md-9">
+                    <select class="select form-control">
+                      <option value="male selected">Louis Pasteur</option>
+                    </select>
+                  </div>
+                </div>
+              </div>
+              <div class="col-md-6">
+                <div class="form-group row">
+                  <label class="col-md-3 col-form-label">Ville</label>
+                  <div class="col-md-9">
+                    <select class="select form-control">
+                      <option value="male selected">Douala</option>
+                      <option value="female">Bafoussam</option>
+                    </select>
+                  </div>
+                </div>
+                <div class="form-group row">
+                  <label class="col-md-3 col-form-label">Date du RDV</label>
+                  <div class="col-md-9 cal-icon">
+                    <input type="text" class="form-control datetimepicker" value="01/06/2002">
+                  </div>
+                </div>
+              </div>
+            </div>
+            <h4 class="card-title" style="margin-top: 15px;margin-bottom: 15px;">Informations du voyage</h4><hr style="margin-top: 0px;"/>
+            <div class="row">
+              <div class="col-md-6">
+                <div class="form-group row">
+                  <label class="col-md-3 col-form-label">Pays de départ</label>
+                  <div class="col-md-9">
+                    <input type="text" class="form-control">
+                  </div>
+                </div>
+                <div class="form-group row">
+                  <label class="col-md-3 col-form-label">Ville de départ</label>
+                  <div class="col-md-9">
+                    <input type="text" class="form-control">
+                  </div>
+                </div>
+                <div class="form-group row">
+                  <label class="col-md-3 col-form-label">Aéroport de départ</label>
+                  <div class="col-md-9">
+                    <input type="text" class="form-control">
+                  </div>
+                </div>
+              </div>
+              <div class="col-md-6">
+                <div class="form-group row">
+                  <label class="col-md-3 col-form-label">Pays d'arrivé</label>
+                  <div class="col-md-9">
+                    <input type="text" class="form-control">
+                  </div>
+                </div>
+                <div class="form-group row">
+                  <label class="col-md-3 col-form-label">Ville d'arrivée</label>
+                  <div class="col-md-9">
+                    <input type="text" class="form-control">
+                  </div>
+                </div>
+                <div class="form-group row">
+                  <label class="col-md-3 col-form-label">Aéroport d'arrivé</label>
+                  <div class="col-md-9">
+                    <input type="text" class="form-control">
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="text-right">
+              <button type="submit" class="btn btn-primary-one">Submit</button>
+            </div>
+          </form>
+        </div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-lg-12">
+        <div class="card-box">
+          <div class="card-block">
+            <h4 class="card-title">Liste des rendez vous</h4>
+            <div class="table-responsive">
+              <table class="table table-hover mb-0">
+                <thead class="bg-thead">
+                <tr>
+                  <th>Motif</th>
+                  <th>Laboratoire</th>
+                  <th>Ville</th>
+                  <th>Date</th>
+                  <th>Action</th>
+                </tr>
+                </thead>
+                <tbody>
+                <tr>
+                  <td>Test</td>
+                  <td>Louis Pasteur</td>
+                  <td>Douala</td>
+                  <td>31/12/2020</td>
+                  <td>
+                    <a>
+                      <i class="fa fa-remove"></i>
+                    </a>
+                  </td>
+                </tr>
+                </tbody>
+              </table>
             </div>
           </div>
         </div>
