--- a/src/app/layout/laboratoire/laboratoire.component.html
+++ b/src/app/layout/laboratoire/laboratoire.component.html
@@ -70,7 +70,7 @@
                         </div>
                       </div>
                     </div>
-                    <br/><h5 style="color: grey; margin-left: 250px;margin-right: 250px;">Services</h5>
+                    <br/><h5 style="color: grey; margin-left: 250px;margin-right: 250px;">Services</h5><hr/>
                     <div class="row">
                       <div class="col-md-4">
                         <div class="checkbox">
@@ -108,7 +108,7 @@
                         </ng-multiselect-dropdown>
                       </div>
                     </div>
-                    <br/><h5 style="color: grey; margin-left: 250px;margin-right: 250px;">Administrateur du compte</h5>
+                    <br/><h5 style="color: grey; margin-left: 250px;margin-right: 250px;">Administrateur du compte</h5><hr/>
                     <div class="row" >
                       <div class="col-md-6">
                         <div class="form-group form-focus">
