--- a/src/app/layout/util-component/sidebar/sidebar.component.html
+++ b/src/app/layout/util-component/sidebar/sidebar.component.html
@@ -19,7 +19,7 @@
           <a routerLink="/tests"><i class="fa fa-calendar"></i> <span>Prendre un RDV</span></a>
         </li>
         <li>
-          <a routerLink="/resultat"><i class="fa fa-calendar"></i> <span>Resultat de test</span></a>
+          <a routerLink="/resultat-test"><i class="fa fa-calendar"></i> <span>Resultat de test</span></a>
         </li>
         <li>
           <a routerLink="/resultat-vaccin"><i class="fa fa-calendar"></i> <span>Resultat de vaccin</span></a>
