--- a/src/app/layout/resultat-test/resultat-test.component.html
+++ b/src/app/layout/resultat-test/resultat-test.component.html
@@ -24,7 +24,7 @@
         <div class="dash-widget">
           <span class="dash-widget-bg3"><i class="fa fa-user-md" aria-hidden="true"></i></span>
           <div class="dash-widget-info text-right">
-            <h3>72</h3>
+            <h3>{{rdv.length}}</h3>
             <span class="widget-title3">Tâches <i class="fa fa-check" aria-hidden="true"></i></span>
           </div>
         </div>
@@ -155,11 +155,12 @@
                 <input type="text" class="form-control rounded" value="{{patient.numeroPassport}}" placeholder="Numéro du passeport" readonly>
               </div>
               <a class="chat-img-attach" >
-                <img width="182" height="137" alt="" src="assets/img/doctor-03.jpg">
-                <div class="chat-placeholder">
+                <img width="182" height="137" alt="" src="assets/img/doctor-03.jpg" *ngIf="patient.imagePassport == null">
+                <img width="182" height="137" alt="imge du passport" [src]="imagePassport" *ngIf="patient.imagePassport != null">
+                <!--<div class="chat-placeholder">
                   <div class="chat-img-name">image du passeport</div>
-                  <!--<div class="chat-file-desc">842 KB</div>-->
-                </div>
+                  &lt;!&ndash;<div class="chat-file-desc">842 KB</div>&ndash;&gt;
+                </div>-->
               </a>
             </div>
           </form>
