--- a/src/app/layout/resultat-vaccin/resultat-vaccin.component.html
+++ b/src/app/layout/resultat-vaccin/resultat-vaccin.component.html
@@ -24,7 +24,7 @@
         <div class="dash-widget">
           <span class="dash-widget-bg3"><i class="fa fa-user-md" aria-hidden="true"></i></span>
           <div class="dash-widget-info text-right">
-            <h3>72</h3>
+            <h3>{{rdv.length}}</h3>
             <span class="widget-title3">Tâches <i class="fa fa-check" aria-hidden="true"></i></span>
           </div>
         </div>
@@ -64,14 +64,14 @@
             <h5 style="margin-bottom: 15px; margin-right: 10px;margin-left: 20px;" *ngIf="vaccinEffectuer.length > 0">Vaccins effecués sur le patient</h5>
             <div class="row" *ngIf="vaccinEffectuer.length > 0">
               <div class="col-md-4" *ngFor="let obj of vaccinEffectuer">
-                <input type="text" class="form-control rounded" value="{{obj.label}}"/>
+                <input type="text" class="form-control rounded" value="{{obj.nomVaccin}}"/>
               </div>
             </div><br *ngIf="vaccinEffectuer.length > 0"/>
-            <div class="form-group row">
+            <!--<div class="form-group row">
               <div class="col-md-12">
-                <textarea rows="3" cols="5" class="form-control rounded" placeholder="Observations" value="true"></textarea>
+                <textarea rows="3" cols="5" class="form-control rounded" placeholder="Observations" value="true" [(ngModel)]="commentaire"></textarea>
               </div>
-            </div>
+            </div>-->
             <div class="text-left">
               <div class="col-md-10">
                 <div class="checkbox">
@@ -82,7 +82,7 @@
               </div>
             </div>
             <div class="text-right">
-              <button type="submit" class="btn btn-primary-one" (click)="saveVaccin()">Envoyer</button>
+              <button type="submit" class="btn btn-primary-one" (click)="saveVaccin()" [disabled]="((patient | json) == '{}') || vaccinEffectuer.length == 0">Envoyer</button>
             </div>
           </div>
         </div>
@@ -134,7 +134,7 @@
                 <input type="text" class="form-control rounded" value="{{patient.numeroPassport}}" placeholder="Numéro du passeport" readonly>
               </div>
               <a class="chat-img-attach" >
-                <img width="182" height="137" alt="" src="assets/img/doctor-03.jpg">
+                <img width="182" height="137" alt="image du passeport" src="assets/img/doctor-03.jpg">
                 <div class="chat-placeholder">
                   <div class="chat-img-name">image du passeport</div>
                   <!--<div class="chat-file-desc">842 KB</div>-->
