--- a/src/app/layout/util-component/header/header.component.html
+++ b/src/app/layout/util-component/header/header.component.html
@@ -1,7 +1,7 @@
 <div class="header">
   <div class="header-left">
     <a routerLink="/dashboard" class="logo">
-      <img src="assets/img/logo.png" width="35" height="35" alt=""> <span>ITCTV</span>
+      <img src="assets/img/logo_meduim.jpeg" width="50" height="35" alt=""> <span>AWAYCOVID</span>
     </a>
   </div>
   <a id="toggle_btn" href="javascript:void(0);"><i class="fa fa-bars"></i></a>
