--- a/src/assets/css/loginStyle.css
+++ b/src/assets/css/loginStyle.css
@@ -44,10 +44,27 @@ input {
     transform: translate(-50%, -50%);
     left: 75%;
     width: 50%;
+    overflow-y: auto;
+    max-height: 500px;
     transition: 1s 0.7s ease-in-out;
     display: grid;
     grid-template-columns: 1fr;
     z-index: 5;
+}
+
+::-webkit-scrollbar {
+  width:5px;
+}
+
+::-webkit-scrollbar-track {
+  box-shadow:inset 0 0 5px grey;
+  border-radius: 5px;
+
+}
+
+::-webkit-scrollbar-thumb {
+  background:grey;
+  border-radius:5px;
 }
 
 form {
@@ -69,6 +86,7 @@ form.sign-up-form {
 
 form.sign-in-form {
     z-index: 2;
+    max-height: 500px;
 }
 
 .title {
@@ -82,12 +100,40 @@ form.sign-in-form {
     width: 100%;
     background-color: #f0f0f0;
     margin: 10px 0;
-    height: 55px;
+    height: 45px;
     border-radius: 55px;
     display: grid;
     grid-template-columns: 15% 85%;
     padding: 0 0.4rem;
     position: relative;
+}
+
+select{
+  max-width: 380px;
+  width: 100%;
+  /*background-color: #f0f0f0;*/
+  margin: 10px 0;
+  margin-left: 5px;
+  height: 45px;
+  border-radius: 55px;
+  display: grid;
+  grid-template-columns: 15% 85%;
+  padding: 0 0.4rem;
+  position: relative;
+}
+
+input[type=file]{
+  max-width: 380px;
+  width: 100%;
+  background-color: #f0f0f0;
+  margin: 10px 0;
+  margin-left: 5px;
+  height: 45px;
+  border-radius: 55px;
+  display: grid;
+  grid-template-columns: 15% 85%;
+  padding: 0 0.4rem;
+  position: relative;
 }
 
 .input-field i {
