--- a/src/app/layout/dashboard/dashboard.component.html
+++ b/src/app/layout/dashboard/dashboard.component.html
@@ -1,7 +1,7 @@
 
 <div class="page-wrapper">
   <div class="content">
-    <div class="row">
+    <!--<div class="row">
       <div class="col-md-6 col-sm-6 col-lg-6 col-xl-3">
         <div class="dash-widget">
           <span class="dash-widget-bg1"><i class="fa fa-stethoscope" aria-hidden="true"></i></span>
@@ -374,9 +374,9 @@
           </div>
         </div>
       </div>
-    </div>
+    </div>-->
   </div>
-  <div class="notification-box">
+  <!--<div class="notification-box">
     <div class="msg-sidebar notifications msg-noti">
       <div class="topnav-dropdown-header">
         <span>Messages</span>
@@ -584,5 +584,5 @@
         <a href="chat.html">See all messages</a>
       </div>
     </div>
-  </div>
+  </div>-->
 </div>
