--- a/src/app/layout/resultat-test/resultat-test.component.html
+++ b/src/app/layout/resultat-test/resultat-test.component.html
@@ -30,7 +30,7 @@
         </div>
       </div>
     </div>
-    <div class="row">
+    <!--<div class="row">
       <div class="search-box">
         <div class="input-group input-group-md" style="margin-left: 15px; background-color: #fafafa;">
           <input type="text" class="form-control" placeholder="identifiant du patient" name="search" [(ngModel)]="search">
@@ -39,7 +39,7 @@
           </span>
         </div>
       </div>
-    </div><br>
+    </div><br>-->
     <div class="row">
       <div class="col-md-6">
         <div class="card-box shadow-sm p-3 mb-5 bg-white rounded">
@@ -115,15 +115,10 @@
               <h4 class="card-title">Données du patient</h4>
             </div>
             <div class="col-md-4">
-              <!--<div class="chat-avatar card-title">
-                <a href="profile.html" class="avatar">
-                  <img alt="Cristina Groves" src="assets/img/doctor-thumb-03.jpg" class="img-fluid rounded-circle">
-                </a>
-              </div>-->
               <div class="account-logo">
                 <a href="#">
-                  <img alt="Cristina Groves" src="assets/img/user.jpg" class="img-fluid rounded-circle" *ngIf="patient.imageSelfie == null">
-                  <img alt="Cristina Groves" [src]="imagePath" class="img-fluid rounded-circle" *ngIf="patient.imageSelfie != null">
+                  <img alt="Cristina Groves" src="assets/img/user.jpg" class="img-fluid rounded-circle" *ngIf="((patient.imageSelfie == null) || (patient.imageSelfie == ''))">
+                  <img alt="Cristina Groves" [src]="imagePath" class="img-fluid rounded-circle" *ngIf="((patient.imageSelfie != null) && (patient.imageSelfie != '')) ">
                 </a>
               </div>
             </div>
