--- a/src/app/layout/util-component/sidebar/sidebar.component.html
+++ b/src/app/layout/util-component/sidebar/sidebar.component.html
@@ -12,19 +12,22 @@
         <li>
           <a routerLink="/patients"><i class="fa fa-wheelchair"></i> <span>Patients</span></a>
         </li>-->
-        <li>
+        <li *ngIf="user.laboratoire != null">
           <a routerLink="/appointments"><i class="fa fa-calendar"></i> <span>Rendez-vous</span></a>
         </li>
-        <li>
+        <li *ngIf="user.patient != null">
           <a routerLink="/tests"><i class="fa fa-calendar"></i> <span>Prendre un RDV</span></a>
         </li>
-        <li>
+        <li *ngIf="user.patient != null">
+          <a routerLink="/mes-resultat"><i class="fa fa-calendar"></i> <span>Mes résultats</span></a>
+        </li>
+        <li *ngIf="user.laboratoire != null">
           <a routerLink="/resultat-test"><i class="fa fa-calendar"></i> <span>Resultat de test</span></a>
         </li>
-        <li>
+        <li *ngIf="user.laboratoire != null">
           <a routerLink="/resultat-vaccin"><i class="fa fa-calendar"></i> <span>Resultat de vaccin</span></a>
         </li>
-        <li>
+        <li *ngIf="((user.patient == null) && (user.laboratoire == null))">
           <a routerLink="/laboratoires"><i class="fa fa-calendar"></i> <span>Enregistrer un laboratoire</span></a>
         </li>
         <!--<li>
