--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -81,7 +81,7 @@
           </a>
         </div>
       </form>
-      <form [formGroup]="registerForm" (ngSubmit)="register()" class="sign-up-form">
+     <!-- <form [formGroup]="registerForm" (ngSubmit)="register()" class="sign-up-form">
         <h2 class="title">Sign up</h2>
         <div class="input-field">
           <i class="fas fa-user"></i>
@@ -100,8 +100,10 @@
           <input type="email" placeholder="Email" formControlName="email"/>
         </div>
         <div class="input-field">
-          <i class="fas fa-lock"></i>
-          <input type="password" placeholder="Password" formControlName="password"/>
+          &lt;!&ndash;<i class="fas fa-lock"></i>&ndash;&gt;
+          <i class="fas fa-eye" (click)="passwordVisibility(pwdR)" *ngIf="pwdR.type == 'password'"></i>
+          <i class="fas fa-eye-slash" (click)="passwordVisibility(pwdR)" *ngIf="pwdR.type == 'text'"></i>
+          <input type="password" #pwdR placeholder="Password" formControlName="password"/>
         </div>
         <div class="input-field">
           <i class="fas fa-phone"></i>
@@ -111,14 +113,14 @@
           <i class="fas fa-location-arrow"></i>
           <input type="text" placeholder="Sexe" formControlName="sexe"/>
         </div>
-        <!--<div class="input-field col-md-12">
+        &lt;!&ndash;<div class="input-field col-md-12">
           &lt;!&ndash;<i class="fas fa-map-marker"></i>&ndash;&gt;
           <select name="" formControlName="pays">
             <option disabled>Pays</option>
             <option value="">option 1</option>
             <option value="">option 2</option>
           </select>
-        </div>-->
+        </div>&ndash;&gt;
         <div class="input-field">
           <i class="fas fa-map-marker"></i>
           <input type="text" placeholder="Ville" formControlName="ville"/>
@@ -132,37 +134,36 @@
           <input type="text" placeholder="Date expiration" formControlName="dateExpiration" onfocus="(this.type='date')"/>
         </div>
         <div class="col-md-12">
-          <!--<i class="fas fa-map-marker"></i>-->
+          &lt;!&ndash;<i class="fas fa-map-marker"></i>&ndash;&gt;
           <select name="" id="" formControlName="typePassport">
             <option value="" selected="selected" disabled>Type de passport</option>
-            <option value="1">option 1</option>
-            <option value="2">option 2</option>
+            <option [ngValue]="type.id" *ngFor="let type of passportType">{{type.label}}</option>
           </select>
         </div>
         <div class="">
-         <!-- <i class="fas fa-camera"></i>-->
+         &lt;!&ndash; <i class="fas fa-camera"></i>&ndash;&gt;
           <input type="file" placeholder="Photo du passport" (change)="onFileChanged($event)" formControlName="imagePassport"/>
         </div>
         <a class="chat-img-attach" >
-         <!-- <img width="182" height="137" alt="image du passport" src="assets/img/doctor-03.jpg" *ngIf="urlPassportImage == null">-->
+         &lt;!&ndash; <img width="182" height="137" alt="image du passport" src="assets/img/doctor-03.jpg" *ngIf="urlPassportImage == null">&ndash;&gt;
           <img width="182" height="137" alt="image du passport" [src]="urlPassportImage"  *ngIf="urlPassportImage != null">
-          <!--<div class="chat-placeholder">
+          &lt;!&ndash;<div class="chat-placeholder">
             <div class="chat-img-name">image du passeport</div>
             &lt;!&ndash;<div class="chat-file-desc">842 KB</div>&ndash;&gt;
-          </div>-->
+          </div>&ndash;&gt;
         </a>
         <div class="">
-          <!--<i class="fas fa-camera"></i>-->
+          &lt;!&ndash;<i class="fas fa-camera"></i>&ndash;&gt;
           <input type="file" placeholder="Photo de profil"  formControlName="imageSelfie" (change)="uploadImageProfil($event)"/>
         </div>
         <div class="account-logo">
           <a href="#">
-           <!-- <img alt="Photo de profil" src="assets/img/user.jpg" class="img-fluid rounded-circle" *ngIf="urlProfilImage == null">-->
+           &lt;!&ndash; <img alt="Photo de profil" src="assets/img/user.jpg" class="img-fluid rounded-circle" *ngIf="urlProfilImage == null">&ndash;&gt;
             <img alt="Photo de profil" [src]="urlProfilImage" class="img-fluid rounded-circle" *ngIf="urlProfilImage != null">
           </a>
         </div>
         <input type="submit" class="btn" value="Sign up" />
-        <!--<p class="social-text">Or Sign up with social platforms</p>
+        &lt;!&ndash;<p class="social-text">Or Sign up with social platforms</p>
         <div class="social-media">
           <a href="#" class="social-icon">
             <i class="fab fa-facebook-f"></i>
@@ -176,8 +177,8 @@
           <a href="#" class="social-icon">
             <i class="fab fa-linkedin-in"></i>
           </a>
-        </div>-->
-      </form>
+        </div>&ndash;&gt;
+      </form>-->
     </div>
   </div>
 
@@ -188,8 +189,8 @@
         <p>
           Lorem ipsum, dolor sit amet consectetur adipisicing elit. Debitis, ex ratione. Aliquid!
         </p>
-        <button class="btn transparent" id="sign-up-btn">
-          Sign up
+         <button class="btn transparent" id="sign-up-btn">
+          <!--Sign up-->
         </button>
       </div>
       <img src="../../assets/img/sign.svg" class="image" alt="" />
