--- a/src/app/layout/util-component/header/header.component.html
+++ b/src/app/layout/util-component/header/header.component.html
@@ -84,6 +84,20 @@
     </li>
     <li class="nav-item dropdown has-arrow">
       <a href="#" class="dropdown-toggle nav-link user-link" data-toggle="dropdown">
+        <!--<span class="user-img">
+          <img class="rounded-circle" src="assets/img/user.jpg" width="24" alt="Admin">
+          <span class="status online"></span>
+        </span>
+        &nbsp;<span>{{userConnected.username}}</span>-->
+        <i class="fa fa-globe" style="font-size: 20px;"></i>
+      </a>
+      <div class="dropdown-menu">
+        <a class="dropdown-item" href="#" (click)="switchLang('en', $event)" translate><i class="flag-icon flag-icon-us"></i> English</a>
+        <a class="dropdown-item" href="#" (click)="switchLang('fr', $event)" translate><i class="flag-icon flag-icon-fr"></i> French</a>
+      </div>
+    </li>
+    <li class="nav-item dropdown has-arrow">
+      <a href="#" class="dropdown-toggle nav-link user-link" data-toggle="dropdown">
         <span class="user-img">
           <img class="rounded-circle" src="assets/img/user.jpg" width="24" alt="Admin">
           <span class="status online"></span>
@@ -91,11 +105,8 @@
         &nbsp;<span>{{userConnected.username}}</span>
       </a>
       <div class="dropdown-menu">
-        <a class="dropdown-item" href="profile.html">My Profile</a>
-        <!--
-        <a class="dropdown-item" href="edit-profile.html">Edit Profile</a>
-        <a class="dropdown-item" href="settings.html">Settings</a>-->
-        <a class="dropdown-item" href="#" (click)="logout($event)">Logout</a>
+        <a class="dropdown-item" href="#" (click)="switchLang('fr', $event)" translate>My Profile</a>
+        <a class="dropdown-item" href="#" (click)="logout($event)" translate>Logout</a>
       </div>
     </li>
   </ul>
