--- a/src/app/layout/util-component/sidebar/sidebar.component.html
+++ b/src/app/layout/util-component/sidebar/sidebar.component.html
@@ -2,9 +2,9 @@
   <div class="sidebar-inner slimscroll">
     <div id="sidebar-menu" class="sidebar-menu">
       <ul>
-        <li class="menu-title">Main</li>
+        <li class="menu-title" translate>Main</li>
         <li class="active">
-          <a routerLink="/dashboard"><i class="fa fa-dashboard"></i> <span>Dashboard</span></a>
+          <a routerLink="/dashboard"><i class="fa fa-dashboard"></i> <span translate>Dashboard</span></a>
         </li>
         <!--<li>
           <a routerLink="/doctors"><i class="fa fa-user-md"></i> <span>Doctors</span></a>
@@ -13,22 +13,31 @@
           <a routerLink="/patients"><i class="fa fa-wheelchair"></i> <span>Patients</span></a>
         </li>-->
         <li *ngIf="user.laboratoire != null">
-          <a routerLink="/appointments"><i class="fa fa-calendar"></i> <span>Rendez-vous</span></a>
+          <a routerLink="/appointments"><i class="fa fa-calendar"></i> <span translate>Appointment</span></a>
         </li>
         <li *ngIf="user.patient != null">
-          <a routerLink="/tests"><i class="fa fa-calendar"></i> <span>Prendre un RDV</span></a>
+          <a routerLink="/prendre-rendez-vous"><i class="fa fa-calendar"></i> <span translate>Make an appointment</span></a>
         </li>
         <li *ngIf="user.patient != null">
-          <a routerLink="/mes-resultat"><i class="fa fa-calendar"></i> <span>Mes résultats</span></a>
+          <a routerLink="/mes-resultat"><i class="fa fa-calendar"></i> <span translate>My results</span></a>
         </li>
         <li *ngIf="user.laboratoire != null">
-          <a routerLink="/resultat-test"><i class="fa fa-calendar"></i> <span>Resultat de test</span></a>
+          <a routerLink="/resultat-test"><i class="fa fa-calendar"></i> <span translate>Test result</span></a>
         </li>
         <li *ngIf="user.laboratoire != null">
-          <a routerLink="/resultat-vaccin"><i class="fa fa-calendar"></i> <span>Resultat de vaccin</span></a>
+          <a routerLink="/resultat-vaccin">
+            <i class="fa fa-calendar"></i>
+            <span translate>Vaccine result</span>
+          </a>
+        </li>
+        <li *ngIf="user.laboratoire != null">
+          <a routerLink="/valider-test">
+            <i class="fa fa-calendar"></i>
+            <span translate>validate a test</span>
+          </a>
         </li>
         <li *ngIf="((user.patient == null) && (user.laboratoire == null))">
-          <a routerLink="/laboratoires"><i class="fa fa-calendar"></i> <span>Enregistrer un laboratoire</span></a>
+          <a routerLink="/laboratoires"><i class="fa fa-calendar"></i> <span translate>Register a laboratory</span></a>
         </li>
         <!--<li>
           <a href="schedule.html"><i class="fa fa-calendar-check-o"></i> <span>Doctor Schedule</span></a>
