--- a/src/app/layout/validation-test/validation-test.component.html
+++ b/src/app/layout/validation-test/validation-test.component.html
@@ -30,97 +30,57 @@
         </div>
       </div>
     </div>
-    <div class="row">
+    <!--<div class="row">
       <div class="search-box">
         <div class="input-group input-group-md" style="margin-left: 15px; background-color: #fafafa;">
-          <input type="text" class="form-control" placeholder="N° anonymat" name="search" [(ngModel)]="search">
+          <input type="text" class="form-control" placeholder="identifiant du patient" name="search" [(ngModel)]="search">
           <span class="input-group-append">
             <button class="btn" type="button" (click)="searchPatient()" [disabled]="search == ''"><i class="fa fa-search"></i></button>
           </span>
         </div>
       </div>
-    </div><br>
+    </div><br>-->
     <div class="row">
-      <div class="col-md-12">
+      <div class="col-md-6">
         <div class="card-box shadow-sm p-3 mb-5 bg-white rounded">
-          <h4 class="card-title">Informations du test</h4>
-          <form [formGroup]="form" (ngSubmit)="saveTest()">
+          <h4 class="card-title">Informations sur l’anonymat du patient</h4>
+          <div class="form">
             <div class="form-group row">
-              <label class="col-md-3 col-form-label">N° anonymat</label>
-              <div class="col-md-9">
-                <input type="text" class="form-control rounded" value="{{patient.identifiant}}" readonly>
+              <div class="col-md-12">
+                <input type="text" class="form-control rounded"  placeholder="N° anonymat" (blur)="searchPatient()" [(ngModel)]="search">
               </div>
             </div>
-            <div class="form-group row">
-              <label class="col-form-label col-md-3">IgG :</label>
-              <div class="col-md-9 row" style="margin-top: 6px;">
-                <div class="col-md-4">
-                  <div class="radio">
-                    <label>
-                      <input type="radio" formControlName="igg" value="true"> Positif
-                    </label>
-                  </div>
-                </div>
-                <div class="col-md-4">
-                  <div class="radio">
-                    <label>
-                      <input type="radio" formControlName="igg" value="false"> Négatif
-                    </label>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="form-group row">
-              <label class="col-form-label col-md-3">IgM :</label>
-              <div class="col-md-9 row" style="margin-top: 6px;">
-                <div class="col-md-4">
-                  <div class="radio">
-                    <label>
-                      <input type="radio" formControlName="igm" value="true"> Positif
-                    </label>
-                  </div>
-                </div>
-                <div class="col-md-4">
-                  <div class="radio">
-                    <label>
-                      <input type="radio" formControlName="igm" value="false"> Négatif
-                    </label>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="form-group row">
-              <label class="col-md-3 col-form-label">Observations</label>
-              <div class="col-lg-9">
-                <textarea rows="3" cols="5" class="form-control rounded" formControlName="testCommentaire" value="true"></textarea>
-              </div>
-            </div>
-            <!--<div class="text-left">
+            <div class="text-left">
               <div class="col-md-10">
                 <div class="checkbox">
                   <label>
-                    <input type="checkbox" name="checkbox" class="rounded"> Check me out
+                    <input type="checkbox" name="checkbox" class="rounded" value="true" [(ngModel)]="soins"> Soins fait
                   </label>
                 </div>
               </div>
-            </div>-->
-            <div class="text-right">
-              <button type="submit" class="btn btn-primary-one">Envoyer</button>
             </div>
-          </form>
+            <div class="text-right">
+              <button type="submit" class="btn btn-primary-one" (click)="saveVaccin()" [disabled]="((patient | json) == '{}') || soins == false">Envoyer</button>
+            </div>
+          </div>
         </div>
       </div>
-      <!--<div class="col-md-6">
+      <div class="col-md-6">
         <div class="card-box shadow-sm p-3 mb-5 bg-white rounded">
           <div class="row">
             <div class="col-md-8">
               <h4 class="card-title">Données du patient</h4>
             </div>
             <div class="col-md-4">
+              <!--<div class="chat-avatar card-title">
+                <a href="profile.html" class="avatar">
+                  <img alt="Cristina Groves" src="assets/img/doctor-thumb-03.jpg" class="img-fluid rounded-circle">
+                </a>
+              </div>-->
               <div class="account-logo">
                 <a href="#">
                   <img alt="Cristina Groves" src="assets/img/user.jpg" class="img-fluid rounded-circle" *ngIf="((patient.imageSelfie == null) || (patient.imageSelfie == ''))">
-                  <img alt="Cristina Groves" [src]="imagePath" class="img-fluid rounded-circle" *ngIf="((patient.imageSelfie != null) && (patient.imageSelfie != '')) ">
+                  <img alt="Cristina Groves" [src]="imagePath" class="img-fluid rounded-circle" *ngIf="((patient.imageSelfie != null) && (patient.imageSelfie != ''))">
                 </a>
               </div>
             </div>
@@ -152,17 +112,16 @@
                 <input type="text" class="form-control rounded" value="{{patient.numeroPassport}}" placeholder="Numéro du passeport" readonly>
               </div>
               <a class="chat-img-attach" >
-                <img width="182" height="137" alt="" src="assets/img/doctor-03.jpg" *ngIf="patient.imagePassport == null">
-                <img width="182" height="137" alt="imge du passport" [src]="imagePassport" *ngIf="patient.imagePassport != null">
-                &lt;!&ndash;<div class="chat-placeholder">
+                <img width="182" height="137" alt="image du passeport" src="assets/img/doctor-03.jpg">
+                <div class="chat-placeholder">
                   <div class="chat-img-name">image du passeport</div>
-                  &lt;!&ndash;<div class="chat-file-desc">842 KB</div>&ndash;&gt;
-                </div>&ndash;&gt;
+                  <!--<div class="chat-file-desc">842 KB</div>-->
+                </div>
               </a>
             </div>
           </form>
         </div>
-      </div>-->
+      </div>
     </div>
   </div>
 </div>
